# KDuino

./: CMakeLists.txt
doc/: CMakeLists.txt
src/: CMakeLists.txt  Messages.sh  kduino.cpp  kduino.desktop  kduino.h  kduino.kcfg  kduinoui.rc  kduinoview.cpp  kduinoview.h  kduinoview_base.ui  main.cpp  settings.kcfgc
